Eco number (#595)
* Update EcoNumbers

* Fixed tests

* Fixed formatter

* Fixed code smells

* Fixed change request except coverage

* Fixed coverage

* Did some improvements

* fixed code smells

* fixed coverage

* fixed formatter

* Re-implemented